--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,8 +46,13 @@
     }
 
     @keyframes glow {
-      from { text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00; }
-      to { text-shadow: 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00; }
+      from {
+        text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
+      }
+
+      to {
+        text-shadow: 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00;
+      }
     }
 
     #login-form {
@@ -185,6 +191,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="login-screen">
     <h1>SKY ACE</h1>
@@ -198,7 +205,9 @@
     <div id="hud">
       <div>PILOT: <span id="player-name">-</span></div>
       <div>HEALTH: <span id="player-health">100</span></div>
-      <div class="health-bar"><div class="health-fill" id="health-fill" style="width: 100%"></div></div>
+      <div class="health-bar">
+        <div class="health-fill" id="health-fill" style="width: 100%"></div>
+      </div>
       <div>SCORE: <span id="player-score">0</span></div>
       <div>WEAPON: <span id="player-weapon" class="weapon-indicator">NORMAL</span></div>
       <div id="shield-status" style="display: none;" class="shield-indicator">🛡️ SHIELD ACTIVE</div>
@@ -211,14 +220,15 @@
 
     <div id="controls">
       <h4>CONTROLS</h4>
-      <div>W/↑ - Turn Up</div>
-      <div>S/↓ - Turn Down</div>
-      <div>A/← - Decelerate</div>
-      <div>D/→ - Accelerate</div>
+      <div>W/↑ - Accelerate</div>
+      <div>S/↓ - Decelerate</div>
+      <div>A/← - Pitch Up (CCW)</div>
+      <div>D/→ - Pitch Down (CW)</div>
       <div>SPACE - Fire</div>
     </div>
   </div>
 
   <script type="module" src="/main.js"></script>
 </body>
+
 </html>
