--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <div id="controls-info">
+        <h3>Controls</h3>
+        <p><b>W / Up</b>: Accelerate</p>
+        <p><b>S / Down</b>: Reverse</p>
+        <p><b>A / Left</b>: Turn Left</p>
+        <p><b>D / Right</b>: Turn Right</p>
+        <p><b>Shift + Turn</b>: Rotate Turret</p>
+        <p><b>Space</b>: Fire</p>
+    </div>
     <div id="login-screen">
         <h1>Battle City Clone</h1>
         <input type="text" id="username-input" placeholder="Enter your name" maxlength="10">
@@ -24,7 +33,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src="client.js"></script>
 </body>
 
